--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,60 +17,133 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@color/white"
         tools:context=".ui.login.LoginActivity">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <TextView android:fontFamily="@font/montserrat_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome to"
+            android:id="@+id/txtWelcome"
+            android:layout_marginTop="@dimen/_40dp"
+            android:layout_marginStart="@dimen/_10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="@dimen/txt_18sp"
+            android:textColor="@color/text_color_heading" />
+
+        <TextView android:fontFamily="@font/montserrat_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="bill"
+            android:id="@+id/txtBill"
+            android:layout_marginTop="-10dp"
+            android:layout_marginStart="@dimen/_10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="42sp"
+            android:textColor="@color/text_color_heading" />
+
+        <TextView android:fontFamily="@font/montserrat_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kit"
+            android:id="@+id/txtKit"
+            android:layout_marginTop="-10dp"
+            app:layout_constraintStart_toEndOf="@id/txtBill"
+            app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="42sp"
+            android:textColor="@color/colorPrimary" />
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:visibility="@{isLoginStaff ? View.GONE  : View.VISIBLE}"
                 android:orientation="vertical">
-                <EditText
-                    android:id="@+id/username"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:selectAllOnFocus="true"
+                    android:layout_margin="@dimen/_10dp"
+                    app:endIconMode="none"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <EditText
-                    android:id="@+id/password"
+                    <AutoCompleteTextView
+                        android:id="@+id/username"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="Login mail id" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:selectAllOnFocus="true"
+                    android:layout_margin="@dimen/_10dp"
+                    app:endIconMode="none"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/username" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <Button
+                    <AutoCompleteTextView
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="textPassword"
+                        android:hint="password" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:id="@+id/login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="@dimen/_20dp"
-                    android:text="@string/action_sign_in"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password"
-                    app:layout_constraintVertical_bias="0.2" />
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/_10dp"
+                    app:cardUseCompatPadding="true"
+                    android:layout_marginStart="@dimen/_5dp"
+                    android:layout_marginEnd="@dimen/_5dp"
+                    android:layout_marginTop="@dimen/_5dp"
+                    android:layout_marginBottom="@dimen/_8dp"
+                    android:textStyle="bold"
+                    android:layout_weight="2"
+                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    android:textColor="@color/text_color_heading"
+                    android:gravity="center">
 
-                <TextView android:fontFamily="@font/montserrat_regular"
+                    <TextView android:fontFamily="@font/montserrat_regular"
+                        android:layout_width="match_parent"
+                        android:id="@+id/iv_equals"
+                        android:layout_height="match_parent"
+                        android:text="Login"
+                        android:padding="@dimen/_10dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textSize="@dimen/txt_16sp"
+                        android:textColor="@color/white" />
+
+                </androidx.cardview.widget.CardView>
+
+
+                <TextView android:fontFamily="@font/montserrat_medium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/txtStaffLogin"
+                    android:layout_marginTop="@dimen/_40dp"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="@dimen/txt_16sp"
@@ -79,63 +152,120 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:visibility="@{isLoginStaff ? View.VISIBLE : View.GONE}"
                 android:orientation="vertical">
-                <EditText
-                    android:id="@+id/staffUsername"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:selectAllOnFocus="true"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <EditText
-                    android:id="@+id/staffPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:selectAllOnFocus="true"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/username" />
-
-                <Button
-                    android:id="@+id/staffLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="@dimen/_20dp"
-                    android:text="@string/action_sign_in"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password"
-                    app:layout_constraintVertical_bias="0.2" />
-
-                <TextView android:fontFamily="@font/montserrat_regular"
+                <TextView android:fontFamily="@font/montserrat_medium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textStyle="bold"
+                    android:textSize="@dimen/txt_16sp"
+                    android:layout_marginBottom="@dimen/_20dp"
+                    android:textColor="@color/text_color_heading"
+                    android:text="Staff Login"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_10dp"
+                    app:endIconMode="none"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/staffUsername"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="Login mail id" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_10dp"
+                    app:endIconMode="none"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/staffPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="textPassword"
+                        android:hint="password" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:id="@+id/staffLogin"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/_10dp"
+                    app:cardUseCompatPadding="true"
+                    android:layout_marginStart="@dimen/_5dp"
+                    android:layout_marginEnd="@dimen/_5dp"
+                    android:layout_marginTop="@dimen/_5dp"
+                    android:layout_marginBottom="@dimen/_8dp"
+                    android:textStyle="bold"
+                    android:layout_weight="2"
+                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    android:textColor="@color/text_color_heading"
+                    android:gravity="center">
+
+                    <TextView android:fontFamily="@font/montserrat_regular"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Login"
+                        android:padding="@dimen/_10dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textSize="@dimen/txt_16sp"
+                        android:textColor="@color/white" />
+
+                </androidx.cardview.widget.CardView>
+
+
+
+
+                <TextView android:fontFamily="@font/montserrat_medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/_30dp"
                     android:id="@+id/txtBack"
                     android:textSize="@dimen/txt_16sp"
                     android:textColor="@color/text_color_heading"
                     android:text="Go back"/>
             </LinearLayout>
 
+        <TextView android:fontFamily="@font/montserrat_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/terms"
+            android:layout_marginStart="@dimen/_10dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="@dimen/txt_12sp"
+            android:textColor="@color/text_color_heading" />
 
 
-        </FrameLayout>
+
 
 
 
