--- a/app/src/main/res/layout/fragment_saved_orders.xml
+++ b/app/src/main/res/layout/fragment_saved_orders.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.tab.savedOrders.SavedOrdersFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <TextView android:fontFamily="@font/montserrat_regular"
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        tools:context=".ui.home.tab.savedOrders.SavedOrdersFragment">
 
-</FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerView"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_staff"/>
+
+
+
+    </LinearLayout>
+</layout>
+
+
+
+
