--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -28,9 +28,9 @@
             android:gravity="center"
             android:id="@+id/signOut"
             android:textSize="@dimen/txt_18sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/red"
             android:layout_margin="@dimen/_20dp"
-            android:background="@drawable/corner_four_grey"/>
+            android:background="@drawable/corner_four_red"/>
 
     </RelativeLayout>
 
