--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
     <color name="green">#00D100</color>
     <color name="red">#FF0000</color>
     <color name="main_color">#0B5E8C</color>
 
+    <color name="colorThumbChecked">#0B5E8C</color>
+    <color name="colorThumbUnchecked">#B0BEC5</color>
+    <color name="colorTrackChecked">#96B6C5</color>
+    <color name="colorTrackUnchecked">#CFD8DC</color>
 
     <color name="text_color_primary">#97959c</color>
     <color name="colorPrimaryDark">#0B5E8C</color>
