Mls 1- Billdetails, Receiptfra tax, PDf added.

--- a/app/src/main/res/layout/dialog_fragment_saved_order.xml
+++ b/app/src/main/res/layout/dialog_fragment_saved_order.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.kreativesquadz.billkit.dialogs.savedOrderDialogFrag.SavedOrderDialogViewModel" />
+            type="com.kreativesquadz.billkit.ui.dialogs.savedOrderDialogFrag.SavedOrderDialogViewModel" />
     </data>
 
     <LinearLayout
