--- a/app/src/main/res/layout/dialog_fragment_add_discount.xml
+++ b/app/src/main/res/layout/dialog_fragment_add_discount.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.kreativesquadz.billkit.dialogs.DialogViewModel" />
+            type="com.kreativesquadz.billkit.ui.dialogs.DialogViewModel" />
     </data>
 
     <LinearLayout
