--- a/app/src/main/res/layout/dialog_fragment_add_gst.xml
+++ b/app/src/main/res/layout/dialog_fragment_add_gst.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.kreativesquadz.billkit.dialogs.gstDialogFragment.AddGstDialogViewModel" />
+            type="com.kreativesquadz.billkit.ui.dialogs.gstDialogFragment.AddGstDialogViewModel" />
     </data>
 
     <LinearLayout
