--- a/app/src/main/res/layout/item_settings.xml
+++ b/app/src/main/res/layout/item_settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="itemSettings"
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10dp"
+        android:background="?attr/selectableItemBackground"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -23,7 +24,8 @@
             android:textColor="@color/text_color_main"
             android:layout_margin="@dimen/_10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="setting"/>
 
         <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
             android:layout_width="wrap_content"
