--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,8 +17,10 @@
     <dimen name="_12dp">12dp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_20dp">20dp</dimen>
+    <dimen name="_25dp">25dp</dimen>
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_40dp">40dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
     <dimen name="_15dp">15dp</dimen>
     <dimen name="_18dp">18dp</dimen>
     <dimen name="_dialog_corners">5dp</dimen>
@@ -29,6 +31,7 @@
     <dimen name="txt_home_item">16sp</dimen>
     <dimen name="txt_28sp">28sp</dimen>
     <dimen name="txt_24sp">24sp</dimen>
+    <dimen name="txt_22sp">22sp</dimen>
     <dimen name="txt_20sp">20sp</dimen>
     <dimen name="txt_18sp">18sp</dimen>
     <dimen name="txt_16sp">16sp</dimen>
